migrate from oapi-codegen to ogen
